crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_goto_definition__stdlib_base.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
expression: bundle
---
{
  "request": {
    "col": 1,
    "line": 7,
    "uri": "<PATH>"
  },
  "response": {
    "col_end": 2,
    "col_start": 1,
    "line_end": 21,
    "line_start": 7,
    "uri": "<PATH>"
  }
}
